--- a/ComprasUSA/Base.lproj/LaunchScreen.storyboard
+++ b/ComprasUSA/Base.lproj/LaunchScreen.storyboard
@@ -15,19 +15,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="flag" translatesAutoresizingMaskIntoConstraints="NO" id="oAF-eV-NvX">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="flag" translatesAutoresizingMaskIntoConstraints="NO" id="oAF-eV-NvX">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="tintColor" red="0.67919689416885376" green="0.92729640007019043" blue="0.68054229021072388" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="oAF-eV-NvX" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="2eK-Zn-Tky"/>
+                            <constraint firstItem="oAF-eV-NvX" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="44o-nc-62C"/>
+                            <constraint firstItem="oAF-eV-NvX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="TUH-fQ-q0R"/>
+                            <constraint firstItem="oAF-eV-NvX" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="tZl-Kw-fsD"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="NDO-ib-IVC"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1068" y="604"/>
+            <point key="canvasLocation" x="1066.6666666666667" y="603.34821428571422"/>
         </scene>
     </scenes>
     <resources>
